--- a/package.json
+++ b/package.json
@@ -9,13 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.100.0",
+    "@aws-sdk/client-sqs": "^3.100.0",
+    "@aws-sdk/client-textract": "^3.100.0",
+    "aws-sdk": "^2.1155.0",
+    "axios": "^0.27.2",
+    "lodash": "^4.17.21",
     "next": "12.1.6",
     "openai-api": "^1.3.1",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   },
   "devDependencies": {
+    "@types/node": "^18.0.0",
+    "@types/react": "^18.0.13",
     "eslint": "8.16.0",
-    "eslint-config-next": "12.1.6"
+    "eslint-config-next": "12.1.6",
+    "typescript": "^4.7.3"
   }
 }
